Prevent horizontal scroll in preview details

--- a/packages/front/src/Preview.css
+++ b/packages/front/src/Preview.css
@@ -159,10 +159,6 @@
     width: 100%;
   }
 
-  .preview_details_wrapper {
-    flex-wrap: wrap;
-  }
-
   .preview_links_container {
     display: none;
   }
